--- a/OurApp/package.json
+++ b/OurApp/package.json
@@ -13,7 +13,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^5.2.0",
-    "@angular/cli": "^6.0.3",
+    "@angular/cli": "^6.0.7",
     "@angular/common": "^5.2.0",
     "@angular/compiler": "^5.2.0",
     "@angular/core": "^5.2.0",
@@ -25,6 +25,7 @@
     "bootstrap": "^4.0.0",
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
+    "mongoose": "^5.1.4",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
