--- a/OurApp/package.json
+++ b/OurApp/package.json
@@ -22,10 +22,16 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
-    "bootstrap": "^4.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^2.0.0",
+    "alert-alert": "^1.0.10",
+    "bootstrap": "^4.1.1",
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
     "mongoose": "^5.1.4",
+    "ng2-alert-center": "^0.5.1",
+    "ng2-bootstrap": "^1.6.3",
+    "ng2-bootstrap-alert": "^0.1.2",
+    "ng4-alert": "^4.0.0",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
